test/expected/explain_felcc_v.out
explain void f( ..., char const *fmt )
                ^
17: error: variadic specifier must be last
